--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,1 +1,19 @@
-/build
+# Gradle files
+.gradle/
+build/
+
+# Local configuration files
+.idea/
+
+# Android Studio files
+*.iml
+
+# Log files
+*.log
+
+# Android files
+local.properties
+.DS_Store
+
+# Keystore files
+*.jks
