--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.5.2"
 androidxJunit = "1.2.1"
+circularprogressbar = "3.1.0"
 espressoCore = "3.6.1"
 glide = "4.15.1"
 gson = "2.11.0"
@@ -16,6 +17,8 @@ constraintlayout = "2.1.4"
 navigationFragmentKtx = "2.7.7"
 retrofit = "2.11.0"
 room = "2.6.1"
+segmentedarcview = "1.1.3'"
+segmentedarcviewVersion = "1.1.3"
 viewbindingpropertydelegate = "1.5.9"
 fragmentKtx = "1.8.2"
 
@@ -28,6 +31,8 @@ androidx-navigation-ui-ktx = { module = "androidx.navigation:navigation-ui-ktx",
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
+bio-matic-segmentedarcview = { module = "com.bio-matic:segmentedarcview", version.ref = "segmentedarcviewVersion" }
+circularprogressbar = { module = "com.mikhaellopez:circularprogressbar", version.ref = "circularprogressbar" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
@@ -39,6 +44,7 @@ material = { group = "com.google.android.material", name = "material", version.r
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+segmentedarcview = { module = "implementation 'com.bio-matic:segmentedarcview", version.ref = "segmentedarcview" }
 viewbindingpropertydelegate-full = { module = "com.github.kirich1409:viewbindingpropertydelegate-full", version.ref = "viewbindingpropertydelegate" }
 viewbindingpropertydelegate-noreflection = { module = "com.github.kirich1409:viewbindingpropertydelegate-noreflection", version.ref = "viewbindingpropertydelegate" }
 compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
