--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,19 +1,22 @@
 [versions]
-agp = "8.5.2"
+agp = "8.5.1"
+kotlin = "2.0.0"
+
+coreKtx = "1.15.0"
+junit = "4.13.2"
+junitVersion = "1.2.1"
+espressoCore = "3.6.1"
+appcompat = "1.7.0"
+material = "1.12.0"
+activity = "1.10.0"
+constraintlayout = "2.2.0"
+
 androidxJunit = "1.2.1"
 circularprogressbar = "3.1.0"
-espressoCore = "3.6.1"
 glide = "4.15.1"
 gson = "2.11.0"
 koinAndroid = "3.5.6"
-kotlin = "2.0.0"
-coreKtx = "1.13.1"
-junit = "4.13.2"
-appcompat = "1.7.0"
 kotlinxCoroutinesAndroid = "1.7.3"
-material = "1.12.0"
-activity = "1.9.1"
-constraintlayout = "2.1.4"
 navigationFragmentKtx = "2.7.7"
 retrofit = "2.11.0"
 room = "2.6.1"
@@ -21,6 +24,8 @@ segmentedarcview = "1.1.3'"
 segmentedarcviewVersion = "1.1.3"
 viewbindingpropertydelegate = "1.5.9"
 fragmentKtx = "1.8.2"
+coreKtxVersion = "1.6.1"
+junitKtx = "1.2.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -49,6 +54,8 @@ viewbindingpropertydelegate-full = { module = "com.github.kirich1409:viewbinding
 viewbindingpropertydelegate-noreflection = { module = "com.github.kirich1409:viewbindingpropertydelegate-noreflection", version.ref = "viewbindingpropertydelegate" }
 compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
 fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragmentKtx" }
+core-ktx = { group = "androidx.test", name = "core-ktx", version.ref = "coreKtxVersion" }
+androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
